--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary_color">#FF03071E</color>
+    <color name="secondary_color">#FF370617</color>
+    <color name="third_color">#FF6A040F</color>
+    <color name="fourth_color">#FFFFBA08</color>
 </resources>
