--- a/app/src/main/res/layout/item_popular_movies.xml
+++ b/app/src/main/res/layout/item_popular_movies.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <com.google.android.material.imageview.ShapeableImageView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/imageViewInTheaterItem"
     android:layout_width="136dp"
     android:layout_height="184dp"
     android:scaleType="centerCrop"
