--- a/app/src/main/res/layout/item_popular_movies.xml
+++ b/app/src/main/res/layout/item_popular_movies.xml
@@ -1,13 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<com.google.android.material.imageview.ShapeableImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/imageViewPopularItem"
-    android:layout_width="136dp"
-    android:layout_height="184dp"
-    android:scaleType="centerCrop"
-    app:shapeAppearanceOverlay="@style/roundedCornersImageView"
-    tools:src="@tools:sample/backgrounds/scenic">
+    xmlns:tools="http://schemas.android.com/tools">
 
-</com.google.android.material.imageview.ShapeableImageView>
+    <data>
+
+        <variable
+            name="viewState"
+            type="com.burkclik.movieapp.ui.movie.list.MovieListViewState" />
+    </data>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="136dp"
+        android:layout_height="184dp">
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imageViewPopularItem"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:shapeAppearanceOverlay="@style/roundedCornersImageView"
+            tools:src="@tools:sample/backgrounds/scenic" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
