Design fragment_movie_detail.xml

--- a/app/src/main/res/anim/grid_layout_animation.xml
+++ b/app/src/main/res/anim/grid_layout_animation.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- TODO: When navigating to the back, this animation cause crash -->
 <gridLayoutAnimation xmlns:android="http://schemas.android.com/apk/res/android"
     android:animation="@anim/scale_out"
     android:columnDelay="30%"
     android:direction="left_to_right"
     android:directionPriority="none"
-    android:rowDelay="15%">
-
-</gridLayoutAnimation>
+    android:rowDelay="15%" />
