--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,11 @@
         <item name="cornerSize">10dp</item>
     </style>
 
+    <style name="Widget.MovieApp.RoundedImageView" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
+
     <style name="ThemeOverlay.MovieApp.Chip.Choice" parent="">
         <item name="elevationOverlayEnabled">false</item>
     </style>
