Refactor MovieCreditsAdapter.kt for data binding.

--- a/app/src/main/res/layout/item_cast_card.xml
+++ b/app/src/main/res/layout/item_cast_card.xml
@@ -1,40 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="80dp"
-    android:layout_height="wrap_content"
-    android:background="@color/primary_color"
-    android:orientation="vertical">
+<layout>
 
-    <com.google.android.material.imageview.ShapeableImageView
-        android:id="@+id/imageViewCastPhoto"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
-        android:layout_gravity="center"
-        app:shapeAppearanceOverlay="@style/Widget.MovieApp.RoundedImageView"
-        tools:src="@tools:sample/backgrounds/scenic" />
+    <data>
 
-    <TextView
-        android:id="@+id/textViewCastName"
-        android:layout_width="match_parent"
+        <variable
+            name="credit"
+            type="com.burkclik.movieapp.model.Credits" />
+    </data>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="6dp"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        tools:text="Salma Hayek" />
+        android:background="@color/primary_color"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textViewCastMovieName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:maxLines="1"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="12sp"
-        tools:text="Woman" />
-</LinearLayout>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/imageViewCastPhoto"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_gravity="center"
+            app:imageUrl="@{credit.profilePath}"
+            app:shapeAppearanceOverlay="@style/Widget.MovieApp.RoundedImageView"
+            tools:src="@tools:sample/backgrounds/scenic" />
+
+        <TextView
+            android:id="@+id/textViewCastName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="6dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="@{credit.name}"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            tools:text="Salma Hayek" />
+
+        <TextView
+            android:id="@+id/textViewCastMovieName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="@{credit.character}"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            tools:text="Woman" />
+    </LinearLayout>
+</layout>
