--- a/app/src/main/res/layout/item_in_theater.xml
+++ b/app/src/main/res/layout/item_in_theater.xml
@@ -1,12 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+<layout>
 
-<com.google.android.material.imageview.ShapeableImageView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/imageViewInTheaterMovies"
-    android:layout_width="104dp"
-    android:layout_height="146dp"
-    android:scaleType="centerCrop"
-    app:shapeAppearanceOverlay="@style/roundedCornersImageView"
-    tools:src="@tools:sample/backgrounds/scenic" />
+    <data>
+
+        <variable
+            name="movie"
+            type="com.burkclik.movieapp.model.Movie" />
+    </data>
+
+    <com.google.android.material.imageview.ShapeableImageView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/imageViewInTheaterMovies"
+        android:layout_width="104dp"
+        android:layout_height="146dp"
+        android:scaleType="centerCrop"
+        app:imageUrl="@{movie.posterPath}"
+        app:shapeAppearanceOverlay="@style/roundedCornersImageView"
+        tools:src="@tools:sample/backgrounds/scenic" />
+</layout>
 
