--- a/app/src/main/res/layout/item_popular_movies.xml
+++ b/app/src/main/res/layout/item_popular_movies.xml
@@ -6,8 +6,8 @@
     <data>
 
         <variable
-            name="viewModel"
-            type="com.burkclik.movieapp.ui.movie.list.MovieListViewModel" />
+            name="movie"
+            type="com.burkclik.movieapp.model.Movie" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,6 +18,7 @@
             android:id="@+id/imageViewPopularItem"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            app:imageUrl="@{movie.posterPath}"
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/roundedCornersImageView"
             tools:src="@tools:sample/backgrounds/scenic" />
