--- a/app/src/main/res/layout/item_cast_card.xml
+++ b/app/src/main/res/layout/item_cast_card.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="baseModel"
-            type="com.burkclik.movieapp.data.remote.model.Credits" />
+            type="com.burkclik.movieapp.domain.model.CreditsItem" />
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -18,11 +18,11 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/imageViewCastPhoto"
+            demoImageUrl="@{baseModel.profilePath}"
             android:layout_width="64dp"
             android:layout_height="64dp"
             android:layout_gravity="center"
             android:scaleType="centerCrop"
-            app:imageUrl="@{baseModel.profilePath}"
             app:shapeAppearanceOverlay="@style/Widget.MovieApp.RoundedImageView"
             tools:src="@tools:sample/backgrounds/scenic" />
 
