--- a/app/src/main/res/layout/item_popular_movies.xml
+++ b/app/src/main/res/layout/item_popular_movies.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="movie"
-            type="com.burkclik.movieapp.data.remote.model.Movie" />
+            type="com.burkclik.movieapp.data.remote.model.MovieResponse" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
